=== Version 3.6.9 build ===
- Fixed subforum/topics count in forums list
- fixed personal profile fields appearing even if meaningless
- Fixed mapped accounts disregarding system setting
- Fixed clicking on icons including a link with popups, does not load the popup
- Fixed resume test

=== Version 3.6.9 build 10653 ===
- Updated personal pages
- Added "modern" theme and set it as default theme
- Dates formatting is no longer system-dependent
- Updated custom user profile
- Messages are no longer passed as GET parameters
- Debug mode can now be set per user
- Added "keep best" option in tests
- Allow wildcards in "fill in the gaps" question types
- Allow variable text-box sizes in "empty spaces" questions
- Added select box option in empty spaces questions
- Added option for showing correct answers only if student passed the test
- Added autocomplete="off" for empty space questions to prevent browser from showing the previous answers
- Added "test password" option in tests (Educational/Enterprise editions)
- Resolved memory overuse in lesson reports when having many completed tests
- Updating test score now sets/unsets unit progress
- Added option for compressing test results in database
- Added course prerequisites (course access depends on another course's completion) 
- Changed course certificate expiration calculations to be more accurate (#1225)
- Added the settings checker block for layout of the first page
- Installation auto-fix for session.save_path now looks for and sets more locations
- Added group self-registration option (Enterprise edition)
- Users now can't access files on lessons they are not enrolled to, via .htaccess
- Content safeguarding via .htaccess made optional
- Switched "disabled options" to "enabled options"
- Added "users" and "organization" options in professor/student user types (Enterprise edition)
- Supervisors cannot edit other supervisors of the same branch (Enterprise edition)
- Supervisor permissions updates (Enterprise edition)