@@ -4074,4 +4074,5 @@ define("_THEFILEAPPEARSEMPTYPERHAPSITISNOTFORMATTEDCORRECTLY", "The file appears
 define("_PROGRAMMEDCERTIFICATEEXPIRY", "Certificate scheduled expiration");
 define("_TESTPASSWORD", "Test password");
 define("_SORRYYOUDONOTHAVEACCESSTOTHISBRANCH", "Sorry, you do not have access to this branch");
+define("_SHOWCOMPLETEORGCHART", "Show full organization chart to users");
 ?>
