@@ -1,9 +1,11 @@
 === Version 3.6.9 build ===
 - Fixed subforum/topics count in forums list
-- fixed personal profile fields appearing even if meaningless
+- Fixed personal profile fields appearing even if meaningless
 - Fixed mapped accounts disregarding system setting
 - Fixed clicking on icons including a link with popups, does not load the popup
 - Fixed resume test
+- Fixed language options appearing when creating a new user, even if single language is set
+- Added option to hide parts of organizational chart that are not related to a user (Enterprise edition)
 
 === Version 3.6.9 build 10653 ===
 - Updated personal pages
